Fix white border around images and videos on Firefox

--- a/content/assets/css/style.scss
+++ b/content/assets/css/style.scss
@@ -24,12 +24,11 @@ a {
 }
 
 
-img {
-    display: block;
+img, video {
+    display: block !important;
 }
 
 /* HEADER */
-
 
 /*
 #breadcrumbs {
